objects/ssot__ProcurementEmissionFactorSetItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EconomicSectorCategoryName__c</fullName>
        <label>Economic Sector Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EconomicSectorCode__c</fullName>
        <label>Economic Sector Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EconomicSectorName__c</fullName>
        <label>Economic Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Procurement Emission Factor Set Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PcmtEmssnFctrSetId__c</fullName>
        <label>Procurement Emissions Factor Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Region__c</fullName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3GhgCategory__c</fullName>
        <label>Scope 3 GHG Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldLockDtastUpdtForRec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Dataset Update For Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__TotScpe3EmssnPerMillionSpentNumber__c</fullName>
        <label>Total Scope 3 Emssn per Million Spent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383591766_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProcurementEmissionFactorSetItem_Pcm_rel</label>
        <referenceTo>ssot__ProcurementEmissionFactorSet__dlm</referenceTo>
        <relationshipLabel>ProcurementEmissionFactorSetItem_Pcm_rel</relationshipLabel>
        <relationshipName>rel_1747383591766_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>